--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,31 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+
+# Node
+node_modules/
+npm-debug.log
+yarn-error.log
+dist/
+build/
+.vite/
+
+# Environment files
+.env
+.env.local
+
+# Prisma
+prisma/migrations/
+prisma/dev.db
+
+# Logs
+logs
+*.log
+
+# OS
+.DS_Store
+Thumbs.db
+
+# VSCode
+.vscode/
